# Generative-Multimodal-Recommendation

./: .gitignore  README.md  branch.sh  pyproject.toml  verify_codmr.py  verify_ddrm.py  verify_diffgraph.py  verify_mcdrec.py
GenMMRec/: .gitignore  README.md  compare_models.py  compare_results.py  new.md  requirements.txt  rfgume_time.py  run_comparison.sh  run_rf_comparison.sh  test_rf_models.py
GenMMRec/docs/: README_RF_MODELS.md  RFMREC_README.md  RF_BATCH_TRAINING_README.md  RF_GUME_README.md  RF_IMPLEMENTATION_SUMMARY.md  RF_Module_Usage.md
GenMMRec/src/: main.py  run_ablation_prior.py  run_rf_models.py  run_rf_staged_search.py  run_rfgume.py  visualize_landscape.py
GenMMRec/src/common/: interest_cluster.py  trainer.py
GenMMRec/src/configs/: overall.yaml
GenMMRec/src/configs/dataset/: baby.yaml
GenMMRec/src/configs/model/: BM3.yaml  BPR.yaml  COHESION.yaml  CoDMR.yaml  DiffGraph.yaml  DiffMM.yaml  DualGNN.yaml  FREEDOM.yaml  GRCN.yaml  GUME.yaml  GenAlignGUME.yaml  GenRecV1.yaml  LATTICE.yaml  LD4MRec.yaml  MGCN.yaml  MMGCN.yaml  RFBM3.yaml  RFBPR_remove.yaml  RFCOHESION.yaml  (+17 more)
GenMMRec/src/models/: codmr.py  cohesion.py  diffgraph.py  diffmm.py  genrecbm3.py  genrecv1.py  gume.py  ld4mrec.py  pgl.py  rf_modules.py  rfbm3.py  rfbpr_remove.py  rfcohesion.py  rfdualgnn.py  rffreedom.py  rfgrcn.py  rfgume.py  rfgume_backup.py  rflattice.py  rflayergcn.py  rflgmrec.py  rflightgcn_remove.py  rfmgcn.py  rfmmgcn.py  rfmrec.py  rfpgl.py  rfsmore.py  rfvbpr.py
GenMMRec/src/utils/: configurator.py  dataset.py  quick_start.py  topk_evaluator.py  utils.py
(+12 files in other folders)
